fixed extra white space at bottom of page

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,10 @@
     vertical-align: baseline;
     background: transparent;
 }
+
+
+
+/* body {min-height: 100%;}
+ html {
+   height: 100%;
+ } */
