--- a/src/components/home.css
+++ b/src/components/home.css
@@ -10,7 +10,9 @@
   text-align: center;
   font-family: 'Alegreya Sans', sans-serif;
   font-size: 50px;
-
+  height: 100%;
+  width: 100%;
+  position: absolute;
 
 
 }
@@ -18,6 +20,9 @@
 .home-ul li {
   border: 1px solid black;
   padding: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .home-ul li:hover {
@@ -53,5 +58,8 @@
 .resume-li {
   background: purple;
   padding: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
 }
